# Multi-Agent

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  out.txt  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: agents.md  architecture.md  benchmark.md  configuration.md  contributing.md  index.md  installation.md  mcp.md  quickstart.md
dummy_project/: bad_code.py
src/multiagent/: __main__.py  benchmark.py  cli.py  config.py  log.py  memory.py
src/multiagent/agents/: architect.py  base.py  build.py  coordinator.py  github_pr.py  knowledge_graph.py  memory.py  reviewer.py  security.py  test_runner.py
src/multiagent/context/: store.py
src/multiagent/llm/: gateway.py
src/multiagent/mcp/: client.py
src/multiagent/orchestrator/: core.py
tests/: test_architect.py  test_benchmark.py  test_build.py  test_cli.py  test_config.py  test_context_store.py  test_coordinator.py  test_github_pr.py  test_knowledge_graph.py  test_llm_gateway.py  test_llm_gateway_retry.py  test_llm_metrics.py  test_logging.py  test_main_module.py  test_mcp_client.py  test_memory.py  test_orchestrator_error_boundary.py  test_pipeline.py  test_regression_fixes.py  test_reviewer.py  test_security.py  test_test_runner.py
