[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multiagent"
version = "0.1.0"
description = "Multi-agent code analysis toolkit."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Multiagent Contributors" },
]
dependencies = [
  "httpx>=0.27",
  "rich>=13.7",
]

[project.scripts]
multiagent = "multiagent.cli:main"

[project.optional-dependencies]
dev = [
  "bandit>=1.7",
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.5",
]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["multiagent"]

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
