[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multiagent"
version = "0.2.0"
description = "Multi-agent code analysis toolkit."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Multiagent Contributors" },
]
dependencies = [
  "httpx>=0.27",
  "rich>=13.7",
]

[project.scripts]
multiagent = "multiagent.cli:main"

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = [
  "bandit>=1.7",
  "mypy>=1.10,<1.12",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.5,<0.6",
  "mcp>=1.0",
]
docs = [
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
  "pymdown-extensions>=10.7",
] 

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["UP038"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["multiagent"]

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=src/multiagent --cov-report=term-missing --cov-fail-under=80"
asyncio_mode = "strict"

[tool.bandit]
skips = ["B603", "B607"]
